cmake_minimum_required(VERSION 3.10)
project(coturn)

set(CMAKE_CXX_STANDARD 11)

include_directories(src)
include_directories(src/apps/common)
include_directories(src/apps/peer)
include_directories(src/apps/relay)
include_directories(src/apps/relay/dbdrivers)
include_directories(src/apps/uclient)
include_directories(src/client)
include_directories(src/client++)
include_directories(src/server)

add_executable(coturn
        examples/etc/turn_client_cert.pem
        examples/etc/turn_client_pkey.pem
        examples/etc/turn_server_cert.pem
        examples/etc/turn_server_pkey.pem
        examples/etc/turnserver.conf
        examples/scripts/basic/dos_attack.sh
        examples/scripts/basic/relay.sh
        examples/scripts/basic/tcp_client.sh
        examples/scripts/basic/tcp_client_c2c_tcp_relay.sh
        examples/scripts/basic/udp_c2c_client.sh
        examples/scripts/basic/udp_client.sh
        examples/scripts/loadbalance/master_relay.sh
        examples/scripts/loadbalance/slave_relay_1.sh
        examples/scripts/loadbalance/slave_relay_2.sh
        examples/scripts/loadbalance/tcp_c2c_tcp_relay.sh
        examples/scripts/loadbalance/udp_c2c.sh
        examples/scripts/longtermsecure/secure_dos_attack.sh
        examples/scripts/longtermsecure/secure_dtls_client.sh
        examples/scripts/longtermsecure/secure_dtls_client_cert.sh
        examples/scripts/longtermsecure/secure_relay.sh
        examples/scripts/longtermsecure/secure_relay_cert.sh
        examples/scripts/longtermsecure/secure_sctp_client.sh
        examples/scripts/longtermsecure/secure_tcp_client.sh
        examples/scripts/longtermsecure/secure_tcp_client_c2c_tcp_relay.sh
        examples/scripts/longtermsecure/secure_tls_client.sh
        examples/scripts/longtermsecure/secure_tls_client_c2c_tcp_relay.sh
        examples/scripts/longtermsecure/secure_tls_client_cert.sh
        examples/scripts/longtermsecure/secure_udp_c2c.sh
        examples/scripts/longtermsecure/secure_udp_client.sh
        examples/scripts/longtermsecuredb/secure_relay_with_db_mongo.sh
        examples/scripts/longtermsecuredb/secure_relay_with_db_mysql.sh
        examples/scripts/longtermsecuredb/secure_relay_with_db_mysql_ssl.sh
        examples/scripts/longtermsecuredb/secure_relay_with_db_psql.sh
        examples/scripts/longtermsecuredb/secure_relay_with_db_redis.sh
        examples/scripts/longtermsecuredb/secure_relay_with_db_sqlite.sh
        examples/scripts/mobile/mobile_dtls_client.sh
        examples/scripts/mobile/mobile_relay.sh
        examples/scripts/mobile/mobile_tcp_client.sh
        examples/scripts/mobile/mobile_tls_client_c2c_tcp_relay.sh
        examples/scripts/mobile/mobile_udp_client.sh
        examples/scripts/restapi/secure_relay_secret.sh
        examples/scripts/restapi/secure_relay_secret_with_db_mongo.sh
        examples/scripts/restapi/secure_relay_secret_with_db_mysql.sh
        examples/scripts/restapi/secure_relay_secret_with_db_psql.sh
        examples/scripts/restapi/secure_relay_secret_with_db_redis.sh
        examples/scripts/restapi/secure_relay_secret_with_db_sqlite.sh
        examples/scripts/restapi/secure_udp_client_with_secret.sh
        examples/scripts/restapi/shared_secret_maintainer.pl
        examples/scripts/selfloadbalance/secure_dos_attack.sh
        examples/scripts/selfloadbalance/secure_relay.sh
        examples/scripts/oauth.sh
        examples/scripts/peer.sh
        examples/scripts/readme.txt
        examples/scripts/rfc5769.sh
        examples/var/db/turndb
        man/man1/coturn.1
        man/man1/turnadmin.1
        man/man1/turnserver.1
        man/man1/turnutils.1
        man/man1/turnutils_natdiscovery.1
        man/man1/turnutils_oauth.1
        man/man1/turnutils_peer.1
        man/man1/turnutils_stunclient.1
        man/man1/turnutils_uclient.1
        rpm/build.instructions.txt
        rpm/build.settings.sh
        rpm/build.sh
        rpm/CentOS6.pre.build.sh
        rpm/CentOS7.pre.build.sh
        rpm/common.pre.build.sh
        rpm/epel6.install.sh
        rpm/epel7.install.sh
        rpm/Fedora.pre.build.sh
        rpm/turnserver-tmpfiles.conf
        rpm/turnserver.init.el
        rpm/turnserver.service.fc
        rpm/turnserver.spec
        rpm/turnserver.sysconfig
        rpm/uninstall.turnserver.sh
        src/apps/common/apputils.c
        src/apps/common/apputils.h
        src/apps/common/hiredis_libevent2.c
        src/apps/common/hiredis_libevent2.h
        src/apps/common/ns_turn_openssl.h
        src/apps/common/ns_turn_utils.c
        src/apps/common/ns_turn_utils.h
        src/apps/common/stun_buffer.c
        src/apps/common/stun_buffer.h
        src/apps/natdiscovery/natdiscovery.c
        src/apps/oauth/oauth.c
        src/apps/peer/mainudpserver.c
        src/apps/peer/udpserver.c
        src/apps/peer/udpserver.h
        src/apps/relay/dbdrivers/dbd_mongo.c
        src/apps/relay/dbdrivers/dbd_mongo.h
        src/apps/relay/dbdrivers/dbd_mysql.c
        src/apps/relay/dbdrivers/dbd_mysql.h
        src/apps/relay/dbdrivers/dbd_pgsql.c
        src/apps/relay/dbdrivers/dbd_pgsql.h
        src/apps/relay/dbdrivers/dbd_redis.c
        src/apps/relay/dbdrivers/dbd_redis.h
        src/apps/relay/dbdrivers/dbd_sqlite.c
        src/apps/relay/dbdrivers/dbd_sqlite.h
        src/apps/relay/dbdrivers/dbdriver.c
        src/apps/relay/dbdrivers/dbdriver.h
        src/apps/relay/dtls_listener.c
        src/apps/relay/dtls_listener.h
        src/apps/relay/http_server.c
        src/apps/relay/http_server.h
        src/apps/relay/libtelnet.c
        src/apps/relay/libtelnet.h
        src/apps/relay/mainrelay.c
        src/apps/relay/mainrelay.h
        src/apps/relay/netengine.c
        src/apps/relay/ns_ioalib_engine_impl.c
        src/apps/relay/ns_ioalib_impl.h
        src/apps/relay/ns_sm.h
        src/apps/relay/tls_listener.c
        src/apps/relay/tls_listener.h
        src/apps/relay/turn_admin_server.c
        src/apps/relay/turn_admin_server.h
        src/apps/relay/turn_ports.c
        src/apps/relay/turn_ports.h
        src/apps/relay/userdb.c
        src/apps/relay/userdb.h
        src/apps/rfc5769/rfc5769check.c
        src/apps/stunclient/stunclient.c
        src/apps/uclient/mainuclient.c
        src/apps/uclient/session.h
        src/apps/uclient/startuclient.c
        src/apps/uclient/startuclient.h
        src/apps/uclient/uclient.c
        src/apps/uclient/uclient.h
        src/client/ns_turn_ioaddr.c
        src/client/ns_turn_ioaddr.h
        src/client/ns_turn_msg.c
        src/client/ns_turn_msg.h
        src/client/ns_turn_msg_addr.c
        src/client/ns_turn_msg_addr.h
        src/client/ns_turn_msg_defs.h
        src/client/ns_turn_msg_defs_experimental.h
        src/client++/TurnMsgLib.h
        src/server/ns_turn_allocation.c
        src/server/ns_turn_allocation.h
        src/server/ns_turn_ioalib.h
        src/server/ns_turn_khash.h
        src/server/ns_turn_maps.c
        src/server/ns_turn_maps.h
        src/server/ns_turn_maps_rtcp.c
        src/server/ns_turn_maps_rtcp.h
        src/server/ns_turn_server.c
        src/server/ns_turn_server.h
        src/server/ns_turn_session.h
        src/ns_turn_defs.h
        turndb/schema.mongo.sh
        turndb/schema.sql
        turndb/schema.stats.redis
        turndb/schema.userdb.redis
        turndb/testmongosetup.sh
        turndb/testredisdbsetup.sh
        turndb/testsqldbsetup.sql
        .gitignore
        AUTHORS
        build-docker.sh
        ChangeLog
        configure
        Dockerfile.build
        INSTALL
        LICENSE
        LICENSE.OpenSSL
        make-man.sh
        Makefile.in
        netarch.txt
        NOTE
        postinstall.txt
        README.md
        README.turnadmin
        README.turnserver
        README.turnutils
        STATUS
        TODO)
